packages/midi-markdown/midi_markdown-0.1.0.tar.gz/midi_markdown-0.1.0/tests/fixtures/valid/defines.mmd
---
title: "Defines"
---

@define MAIN_CHANNEL 1
@define DEFAULT_VELOCITY 100
@define TEMPO_FAST 140

[00:00.000]
- tempo 120
- note_on 1.C4 100 1000ms
