packages/midi-markdown/midi_markdown-0.1.0.tar.gz/midi_markdown-0.1.0/tests/fixtures/invalid/missing_frontmatter.mmd
# Missing frontmatter (should fail)

[00:00.000]
- tempo 120
